@@ -671,9 +671,6 @@ void VTHandler::VSNewMember_data( const stem::Event_base<VSsync_rq>& ev, const s
   out_ev.value().grp = ev.value().grp;
   get_gvtime( ev.value().grp, out_ev.value().gvt.gvt );
   out_ev.value().mess = data;
-
-  Send( out_ev );
-
 #ifdef __FIT_VS_TRACE
   try {
     scoped_lock lk(_vtdsp->_lock_tr);
@@ -686,6 +683,7 @@ void VTHandler::VSNewMember_data( const stem::Event_base<VSsync_rq>& ev, const s
   catch ( ... ) {
   }
 #endif // __FIT_VS_TRACE
+  Send( out_ev );
 }
 
 void VTHandler::get_gvtime( group_type g, gvtime_type& gvt )
