@@ -1,3 +1,8 @@
+2007-09-27  Petr Ovtchenkov  <ptr@island.corbina.net>
+
+	* vshostmgr.cc, janus.cc, vtime.cc: print trace info before
+	stem's Send.
+
 2007-09-25  Petr Ovtchenkov  <ptr@island.corbina.net>
 
 	* vshostmgr.h, vshostmgr.cc: try to connect to well-known hosts
